--- a/dev/index.html
+++ b/dev/index.html
@@ -16,9 +16,9 @@ Pkg.add(&quot;StructuralIdentifiability&quot;)</code></pre><h2 id="Citation"><a 
 }</code></pre><h2 id="Feature-Summary"><a class="docs-heading-anchor" href="#Feature-Summary">Feature Summary</a><a id="Feature-Summary-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-Summary" title="Permalink"></a></h2><p><code>StructuralIdentifiability.jl</code> can assess local and global identifiability of ODE models. In addition to these straightforward identifiability queries on individual parameters, the package can distinguish between single- and multi-experiment identifiability.</p><h2 id="Feature-List"><a class="docs-heading-anchor" href="#Feature-List">Feature List</a><a id="Feature-List-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-List" title="Permalink"></a></h2><ul><li>Local identifiability checks</li><li>Global identifiability checks</li><li>Assessment of identifiable functions of parameters and states</li><li>Model reparametrization (experimental)</li></ul><h2 id="Contributing"><a class="docs-heading-anchor" href="#Contributing">Contributing</a><a id="Contributing-1"></a><a class="docs-heading-anchor-permalink" href="#Contributing" title="Permalink"></a></h2><ul><li><p>Please refer to the <a href="https://github.com/SciML/ColPrac/blob/master/README.md">SciML ColPrac: Contributor&#39;s Guide on Collaborative Practices for Community Packages</a> for guidance on PRs, issues, and other matters relating to contributing to StructuralIdentifiability.</p></li><li><p>There are a few community forums:</p><ul><li>The #diffeq-bridged channel in the <a href="https://julialang.org/slack/">Julia Slack</a></li><li><a href="https://gitter.im/JuliaDiffEq/Lobby">JuliaDiffEq</a> on Gitter</li><li>On the Julia Discourse forums</li><li>See also <a href="https://sciml.ai/community/">SciML Community page</a></li></ul></li></ul><h2 id="Reproducibility"><a class="docs-heading-anchor" href="#Reproducibility">Reproducibility</a><a id="Reproducibility-1"></a><a class="docs-heading-anchor-permalink" href="#Reproducibility" title="Permalink"></a></h2><details><summary>The documentation of this SciML package was built using these direct dependencies,</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Project.toml`
   [6e4b80f9] BenchmarkTools v1.5.0
   [e30172f5] Documenter v1.6.0
-  [961ee093] ModelingToolkit v9.33.1
-  [220ca800] StructuralIdentifiability v0.5.9 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.10.4
-Commit 48d4fd48430 (2024-06-04 10:41 UTC)
+  [961ee093] ModelingToolkit v9.36.0
+  [220ca800] StructuralIdentifiability v0.5.9 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.10.5
+Commit 6f3fdf7b362 (2024-08-27 14:19 UTC)
 Build Info:
   Official https://julialang.org/ release
 Platform Info:
@@ -36,12 +36,13 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [79e6a3ab] Adapt v4.0.4
   [66dad0bd] AliasTables v1.1.3
   [ec485272] ArnoldiMethod v0.4.0
-  [4fba245c] ArrayInterface v7.15.0
+  [4fba245c] ArrayInterface v7.16.0
   [4c555306] ArrayLayouts v1.10.3
   [a9b6321e] Atomix v0.1.0
   [6e4b80f9] BenchmarkTools v1.5.0
-  [e2ed5e7c] Bijections v0.1.8
+  [e2ed5e7c] Bijections v0.1.9
   [62783981] BitTwiddlingConvenienceFunctions v0.1.6
+  [8e7c35d0] BlockArrays v1.1.0
   [2a0fbf3d] CPUSummary v0.2.6
   [00ebfdb7] CSTParser v3.4.3
   [d360d2e6] ChainRulesCore v1.24.0
@@ -63,17 +64,18 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [864edb3b] DataStructures v0.18.20
   [e2d170a0] DataValueInterfaces v1.0.0
   [2b5f629d] DiffEqBase v6.154.0
-  [459566f4] DiffEqCallbacks v3.8.0
+  [459566f4] DiffEqCallbacks v3.9.0
   [77a26b50] DiffEqNoiseProcess v5.23.0
   [163ba53b] DiffResults v1.1.0
   [b552c78f] DiffRules v1.15.1
-  [a0c0ee7d] DifferentiationInterface v0.5.14
+  [a0c0ee7d] DifferentiationInterface v0.5.15
+  [8d63f2c5] DispatchDoctor v0.4.14
   [31c24e10] Distributions v0.25.111
   [ffbed154] DocStringExtensions v0.9.3
   [e30172f5] Documenter v1.6.0
   [5b8099bc] DomainSets v0.7.14
   [7c1d4256] DynamicPolynomials v0.6.0
-⌅ [06fc5a27] DynamicQuantities v0.13.2
+  [06fc5a27] DynamicQuantities v1.0.0
   [4e289a0a] EnumX v1.0.4
   [f151be2c] EnzymeCore v0.7.8
   [e2ba6199] ExprTools v0.1.10
@@ -81,8 +83,8 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [7034ab61] FastBroadcast v0.3.5
   [9aa1b823] FastClosures v0.3.2
   [29a986be] FastLapackInterface v2.0.4
-  [1a297f60] FillArrays v1.12.0
-  [64ca27bc] FindFirstFunctions v1.3.0
+  [1a297f60] FillArrays v1.13.0
+  [64ca27bc] FindFirstFunctions v1.4.0
   [6a86dc24] FiniteDiff v2.24.0
   [1fa38f19] Format v1.3.7
   [f6369f11] ForwardDiff v0.10.36
@@ -105,21 +107,20 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [92d709cd] IrrationalConstants v0.2.2
   [c8e1da08] IterTools v1.10.0
   [82899510] IteratorInterfaceExtensions v1.0.0
-  [692b3bcd] JLLWrappers v1.5.0
+  [692b3bcd] JLLWrappers v1.6.0
   [682c06a0] JSON v0.21.4
   [98e50ef6] JuliaFormatter v1.0.60
-  [ccbc3e58] JumpProcesses v9.13.4
+  [ccbc3e58] JumpProcesses v9.13.7
   [ef3ab10e] KLU v0.6.0
   [ba0b0d4f] Krylov v0.9.6
   [b964fa9f] LaTeXStrings v1.3.1
-  [2ee39098] LabelledArrays v1.16.0
   [984bce1d] LambertW v0.4.6
   [23fbe1c1] Latexify v0.16.5
   [10f19ff3] LayoutPointers v0.1.17
   [0e77f7df] LazilyInitializedFields v1.2.2
   [5078a376] LazyArrays v2.2.0
   [d3d80556] LineSearches v7.3.0
-  [7ed4a6bd] LinearSolve v2.33.0
+  [7ed4a6bd] LinearSolve v2.34.0
   [2ab3a3ac] LogExpFunctions v0.3.28
   [bdcacae8] LoopVectorization v0.12.171
   [d8e11817] MLStyle v0.4.17
@@ -128,7 +129,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [d0879d2d] MarkdownAST v0.1.2
   [bb5d69b7] MaybeInplace v0.1.4
   [e1d29d7a] Missings v1.2.0
-  [961ee093] ModelingToolkit v9.33.1
+  [961ee093] ModelingToolkit v9.36.0
   [46d2c3a1] MuladdMacro v0.2.4
   [102ac46a] MultivariatePolynomials v0.5.6
   [d8a4904e] MutableArithmetics v1.4.6
@@ -154,8 +155,8 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [08abe8d2] PrettyTables v2.3.2
   [27ebfcd6] Primes v0.5.6
   [92933f4c] ProgressMeter v1.10.2
-  [43287f4e] PtrArrays v1.2.0
-  [1fd47b50] QuadGK v2.10.1
+  [43287f4e] PtrArrays v1.2.1
+  [1fd47b50] QuadGK v2.11.0
   [74087812] Random123 v1.7.0
   [fb686558] RandomExtensions v0.4.4
   [e6cf234a] RandomNumbers v1.6.0
@@ -170,9 +171,9 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [7e49a35a] RuntimeGeneratedFunctions v0.5.13
   [94e857df] SIMDTypes v0.1.0
   [476501e8] SLEEFPirates v0.6.43
-  [0bca4576] SciMLBase v2.50.3
-  [c0aeaf25] SciMLOperators v0.3.9
-  [53ae85a6] SciMLStructures v1.4.2
+  [0bca4576] SciMLBase v2.52.0
+  [c0aeaf25] SciMLOperators v0.3.10
+  [53ae85a6] SciMLStructures v1.5.0
   [efcf1570] Setfield v1.1.1
   [727e6d20] SimpleNonlinearSolve v1.12.0
   [699a6c99] SimpleTraits v0.9.4
@@ -193,11 +194,12 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [220ca800] StructuralIdentifiability v0.5.9 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`
   [2efcf032] SymbolicIndexingInterface v0.3.28
   [19f23fe9] SymbolicLimits v0.2.2
-  [d1185830] SymbolicUtils v3.4.1
-  [0c5d862f] Symbolics v6.3.0
+  [d1185830] SymbolicUtils v3.5.0
+  [0c5d862f] Symbolics v6.5.0
   [3783bdb8] TableTraits v1.0.1
   [bd369af6] Tables v1.12.0
   [8ea1fca8] TermInterface v2.0.0
+  [1c621080] TestItems v1.0.0
   [8290d209] ThreadingUtilities v0.5.2
   [a759f4b9] TimerOutputs v0.5.24
   [0796e94c] Tokenize v0.5.29
@@ -215,7 +217,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [2e619515] Expat_jll v2.6.2+0
   [e134572f] FLINT_jll v300.100.300+0
   [f8c6e375] Git_jll v2.44.0+2
-  [1d5cc7b8] IntelOpenMP_jll v2024.2.0+0
+  [1d5cc7b8] IntelOpenMP_jll v2024.2.1+0
   [94ce4f54] Libiconv_jll v1.17.0+0
   [856f044c] MKL_jll v2024.2.0+0
 ⌅ [656ef2d0] OpenBLAS32_jll v0.3.24+0
@@ -271,9 +273,9 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [efcefdf7] PCRE2_jll v10.42.0+1
   [bea87d4a] SuiteSparse_jll v7.2.1+1
   [83775a58] Zlib_jll v1.2.13+1
-  [8e850b90] libblastrampoline_jll v5.8.0+1
+  [8e850b90] libblastrampoline_jll v5.11.0+0
   [8e850ede] nghttp2_jll v1.52.0+1
   [3f19e933] p7zip_jll v17.4.0+2
 Info Packages marked with ⌅ have new versions available but compatibility constraints restrict them from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
 <a href="">manifest</a> file and the
-<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.6.0 on <span class="colophon-date" title="Tuesday 27 August 2024 00:30">Tuesday 27 August 2024</span>. Using Julia version 1.10.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.6.0 on <span class="colophon-date" title="Monday 2 September 2024 21:57">Monday 2 September 2024</span>. Using Julia version 1.10.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
